check in graph and text tools

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 WebCrawl/.vs/
 WebCrawl/WebCrawl/bin/
 WebCrawl/WebCrawl/obj/
+Tools/.vs/
+Tools/Tools/obj/
+Tools/GraphTextMix/obj/
+Tools/GraphTextMix/bin/
